--- a/config/.env
+++ b/config/.env
@@ -1,1 +1,3 @@
-SESSION_SECRET="structure"
+SESSION_SECRET="structureWAITILEAKEDLOL"
+DB_STRING=mongodb+srv://jaakmyr:b7hP2KLolOT45DBh@cluster0.eutqwas.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=8000
